@@ -8,9 +8,23 @@ scriptfiles =			\
 	gaim.py			\
 	gedit.py		\
 	gimp.py			\
+	gnome-accessibility-keyboard-properties.py	\
+	gnome-at-properties.py	\
 	gnome-background-properties.py	\
+	gnome-default-applications-properties.py	\
+	gnome-display-properties.py	\
+	gnome-font-properties.py	\
+	gnome-keybinding-properties.py	\
+	gnome-keyboard-properties.py	\
 	gnome-mouse-properties.py	\
+	gnome-network-preferences.py	\
+	gnome-panel.py		\
+	gnome-passwd.py		\
+	gnome-sound-properties.py	\
 	gnome-system-monitor.py	\
+	gnome-theme-manager.py	\
+	gnome-ui-properties.py	\
+	gnome-window-properties.py	\
 	realplay.py		\
 	yelp.py			\
 	zen-installer.py
